# xdash

./: CMakeLists.txt  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  xdash
src/: appds.cpp  appds.hpp  config.cpp  config.hpp  desktopentry.hpp  logger.cpp  logger.hpp  loglevel.hpp  main.cpp  overlay.cpp  overlay.hpp  trigger.cpp  trigger.hpp
